- warp [2000-07-08]

=item *

Fixed variable substitution in Psh::PerlEval so that whitespace after a
backslash does not split words anymore
- warp [2000-07-08]

=item *

Half-hearted attempt at getting whitespace and special characters in
TAB completion right
- warp [2000-07-08]

=head2 Fixes

=item *

The parser now allows usage of ->
- warp [2000-07-27]

=back


###############################################################################
###############################################################################
##
## 0.008
##
###############################################################################
###############################################################################

=head1 0.008 [2000-04-30]

=head2 New and Enhanced Built-ins

=over 4

=item B<cd> and B<dirs>

The B<cd> builtin now has a (currently unlimited) history list, accessible
using:

  cd -/+/%number

The new builtin B<dirs> displays the stack.

=item B<complete>

Adds a mightier and B<bash> compatible way to define custom completions.

=item B<firsttime>

A firsttime user setup utility for the F<.pshrc> file. It cannot do a lot
currently but will grow in future.

=item B<function>

Tries to emulate B<bash>'s behaviour.

=item B<history>

=item B<unalias>

Does not remove builtins of the same name anymore.

=back


=head2 New Features

=over 4

=item *

Extended Completion code for Perl (supports C<$#foo>, C<$foo-E<gt>{key>,
C<$foo-E<gt>method>, subroutine without C<&>, B<perl> reserved symbol)

=item *

Executable completion now even after initial C<!> for shell escape

=item *

Some minimal status code testing and error handling for user input.

=item *

Understands environment variable C<$IGNOREEOF>.

=item *

Accepts the B<-i> command line switch and ignores it for B<bash> compatibility.

=item *

If the line you entered matches the last line it won't be added to the history.

=item *

On Unix, support for a global F<.pshrc> file at F</etc/pshrc>.

=item *
